--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   connectivity_plus: ^3.0.3
   equatable: ^2.0.5
+  hydrated_bloc: ^9.1.0
+  path_provider: ^2.0.14
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
